--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "express-basic-auth": "^1.1.4",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-basic-auth": "^1.1.6",
     "lowdb": "^1.0.0",
-    "moment": "^2.21.0"
+    "moment": "^2.22.2",
+    "superagent": "^4.0.0-beta.5"
   }
 }
